[gd_scene load_steps=15 format=3 uid="uid://e21wtoep4p87"]

[ext_resource type="Texture2D" uid="uid://dtrvqgkwukoy3" path="res://Sprites/Player_metroid.png" id="1_4llae"]
[ext_resource type="Script" path="res://Entities/Scripts/player.gd" id="1_klnmr"]
[ext_resource type="Shader" path="res://Shaders/hurt.gdshader" id="2_5ptnv"]
[ext_resource type="Texture2D" uid="uid://vrlt3nifyfyl" path="res://Sprites/gun_1.png" id="3_2sn8i"]
[ext_resource type="PackedScene" uid="uid://b1kgp8j4uno8y" path="res://UI/Scenes/mouse_icon.tscn" id="4_dkpbr"]
[ext_resource type="Script" path="res://Entities/Scripts/camera.gd" id="4_modfr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n0wsg"]
radius = 7.07107

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xkl1w"]
shader = ExtResource("2_5ptnv")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Animation" id="Animation_mxg3t"]
resource_name = "Dead"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reset_state"
}]
}

[sub_resource type="Animation" id="Animation_0ptym"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_fxuhm"]
resource_name = "Move"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_derui"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("player_collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hitbox/hitbox_collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ieiu6"]
_data = {
"Dead": SubResource("Animation_mxg3t"),
"Idle": SubResource("Animation_0ptym"),
"Move": SubResource("Animation_fxuhm"),
"RESET": SubResource("Animation_derui")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_bs530"]

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_mask = 95
script = ExtResource("1_klnmr")

[node name="player_collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_n0wsg")
disabled = true

[node name="player_sprite" type="Sprite2D" parent="."]
y_sort_enabled = true
material = SubResource("ShaderMaterial_xkl1w")
position = Vector2(0, -13)
texture = ExtResource("1_4llae")
hframes = 8
vframes = 7
frame = 1

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ieiu6")
}
autoplay = "Idle"

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(0, -13)
collision_mask = 32

[node name="hitbox_collider" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 13)
shape = SubResource("CircleShape2D_bs530")
disabled = true
debug_color = Color(0.805101, 0.389126, 0.402094, 0.42)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -13)
zoom = Vector2(3.5, 3.5)
script = ExtResource("4_modfr")

[node name="camera_shake" type="Timer" parent="Camera2D"]
autostart = true

[node name="gun_handler" type="Node2D" parent="."]

[node name="gun_sprite" type="Sprite2D" parent="gun_handler"]
position = Vector2(6, 0)
texture = ExtResource("3_2sn8i")

[node name="bullet_point" type="Marker2D" parent="gun_handler"]
position = Vector2(12, 0)

[node name="mouse_icon" parent="." instance=ExtResource("4_dkpbr")]

[node name="trail_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Camera2D/camera_shake" to="Camera2D" method="_on_camera_shake_timeout"]
[connection signal="timeout" from="trail_timer" to="." method="_on_trail_timer_timeout"]
